# spacer

./: .gitignore  Cargo.toml  README.md  Spacer.csproj  Spacer.slnx  config.example.toml  project.godot
src/: agent.rs  config.rs  error.rs  main.rs  mcp.rs
src/AI/: Agent.cs  Agent.cs.uid  AgentManager.cs  AgentManager.cs.uid  AgentSettings.cs  AgentSettings.cs.uid  IAgentAction.cs  IAgentTool.cs  McpManager.cs  McpManager.cs.uid
src/AI/Tool/: Speak.cs
src/UI/: AgentSettingsPanel.cs  AgentSettingsPanel.cs.uid  AgentSettingsPanel.tscn
src/agent/: codex.rs
