[package]
name = "worlder"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
rmcp = { version = "1.7.0", features = ["server", "transport-streamable-http-server"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tempfile = "3"
thiserror = "2"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "process", "io-util", "net"]}
tokio-util = "0.7"
toml = "1.1"
